# msp430-usb-jtag

./: .ccsproject  .cproject  .gitmodules  .project  Makefile  README.TXT  boardinit.c  cfg.h  defs.h  jtag.c  jtag.h  libxsvf.h  lnk_msp430f5510.cmd  main.c  nand.py  nand_ordb3.c  nand_ordb3.h  ordb3a_main.c  safesleep.h  swi2cmst.c  swi2cmst.h  tps65217.c  tps65217.h  uart.c  uart.h  usbConstructs.c  usbEventHandling.c  usbhidmain.c  xsvf-morecmds.diff
Debug/: ccsObjs.opt  ccsSrcs.opt  main.pp  makefile  msp430_usb_jtag.map  msp430_usb_jtag.out  subdir_rules.mk  subdir_vars.mk  swi2cmst.pp  tps65217.pp
msp430-usb/: autogen.sh  configure.in
msp430-usb/USB_config/: UsbIsr.c  descriptors.c  descriptors.h
msp430-usb/src/: Makefile.am  main.c  usbConstructs.c  usbConstructs.h  usbEventHandling.c
msp430-usb/src/F5xx_F6xx_Core_Lib/: HAL_MACROS.h  HAL_PMAP.c  HAL_UCS.c
msp430-usb/src/USB_API/USB_CDC_API/: UsbCdc.c
msp430-usb/src/USB_API/USB_Common/: types.h  usb.c  usb.h
msp430-usb/src/USB_API/USB_HID_API/: UsbHid.c
msp430-usb/src/USB_config/: UsbIsr.c  descriptors.c  descriptors.h
